syntax = "proto2";

import "TSDArchives.proto";
import "TSDCommandArchives.proto";
import "TSKArchives.proto";
import "TSCKArchives.proto";
import "TSPMessages.proto";
import "TSWPArchives.proto";
import "TSWPCommandArchives.proto";
import "TSSArchives.proto";
import "TSTArchives.proto";
import "TSCEArchives.proto";
package TSA;

enum GalleryInfoCaptionMode {
  GalleryInfoCaptionModeNone = 0;
  GalleryInfoCaptionModePerImage = 1;
  GalleryInfoCaptionModeAllImages = 2;
}
enum GalleryInfoProperty {
  GalleryInfoCaptionProperty = 0;
}
enum GalleryCaptionMode {
  GalleryCaptionModeNone = 0;
  GalleryCaptionModePerImage = 1;
  GalleryCaptionModeAllImages = 2;
}
enum GalleryItemProperty {
  GalleryItemPropertyImageData = 0;
  GalleryItemPropertyThumbnailImageData = 1;
  GalleryItemPropertyAccessibilityDescription = 2;
}
message DocumentArchive {
  required .TSK.DocumentArchive super = 1;
  repeated .TSWP.TextPresetDisplayItemArchive text_preset_display_items = 2;
  optional string document_language = 3;
  optional .TSP.Reference calculation_engine = 4;
  optional .TSP.Reference view_state = 5;
  optional .TSP.Reference function_browser_state = 6;
  optional .TSP.Reference tables_custom_format_list = 7;
  optional bool needs_media_compatibility_upgrade = 8;
  optional string template_identifier = 9;
  optional .TSP.Reference shortcut_controller = 10;
  optional .TSP.Reference annotation_cache_deprecated = 11;
  optional .TSP.Reference custom_format_list = 12;
  optional .TSP.Reference annotation_cache_deprecated_2 = 13;
  optional bool collaborative_media_compatibility_upgrade_did_fail = 14;
  optional bool can_use_hevc = 15;
  optional bool is_content_source = 16;
}

message FunctionBrowserStateArchive {
  repeated uint32 recent_functions = 1;
  repeated uint32 back_functions = 2;
  repeated uint32 forward_functions = 3;
  optional uint32 current_function = 4;
}

message ThemePresetsArchive {
  repeated .TSP.Reference caption_style_presets = 1;
  repeated .TSP.Reference svg_import_style_presets = 2;
  extend .TSS.ThemeArchive {
    optional .TSA.ThemePresetsArchive extension = 210;
  }
}

message ShortcutControllerArchive {
  message ShortcutMapEntry {
    required string shortcut = 1;
    required .TSP.Reference style = 2;
  }

  repeated .TSA.ShortcutControllerArchive.ShortcutMapEntry entries = 1;
}

message PropagatePresetCommandArchive {
  required .TSK.CommandArchive super = 1;
  required .TSP.Reference preset_change_command = 2;
  required bool always_preserve_appearance = 3;
}

message ShortcutCommandArchive {
  optional .TSK.CommandArchive super = 1;
  optional .TSP.Reference old_style = 2;
  optional .TSP.Reference new_style = 3;
  optional string old_shortcut = 4;
  optional string new_shortcut = 5;
}

message AddCustomFormatCommandArchive {
  required .TSK.CommandArchive super = 1;
  optional .TSK.CustomFormatArchive custom_format = 2;
  optional .TSP.UUID custom_format_key = 3;
}

message UpdateCustomFormatCommandArchive {
  optional .TSK.CommandArchive super = 1;
  optional .TSK.CustomFormatArchive custom_format = 2;
  optional .TSK.CustomFormatArchive old_custom_format = 3;
  optional .TSP.UUID custom_format_key = 4;
}

message ReplaceCustomFormatCommandArchive {
  optional .TSK.CommandArchive super = 1;
  optional .TSK.CustomFormatArchive custom_format = 2;
  optional .TSP.UUID custom_format_key = 3;
  optional .TSK.FormatStructArchive replacement_format = 4;
}

message NeedsMediaCompatibilityUpgradeCommandArchive {
  required .TSK.CommandArchive super = 1;
  optional bool needs_media_compatibility_upgrade = 2;
  optional bool old_needs_media_compatibility_upgrade = 3;
  optional bool collaborative_media_compatibility_upgrade_did_fail = 4;
  optional bool old_collaborative_media_compatibility_upgrade_did_fail = 5;
  optional bool can_use_hevc = 6;
  optional bool old_can_use_hevc = 7;
}

message ChangeDocumentLocaleCommandArchive {
  optional .TSK.CommandArchive super = 1;
  optional string old_locale_id = 2;
  optional string new_locale_id = 3;
  optional .TSK.FormattingSymbolsArchive old_formatting_symbols = 4;
  optional .TSK.FormattingSymbolsArchive new_formatting_symbols = 5;
}

message InducedVerifyObjectsWithServerCommandArchive {
  required .TSK.CommandArchive super = 1;
  repeated .TSP.UUID object_id_list = 2;
  optional bool object_id_list_undefined = 3;
  repeated string server_object_s_o_s_string_list = 4;
  optional bool server_object_s_o_s_string_list_undefined = 5;
  required bool pending_recalc = 6;
  required double remote_data_sync_key = 7;
}

message InducedVerifyTransformHistoryWithServerCommandArchive {
  required .TSK.CommandArchive super = 1;
  repeated .TSK.OperationStorageEntry server_operation_storage_entries = 2;
  optional bool server_operation_storage_entries_undefined = 3;
}

message StyleUpdatePropertyMapCommandArchive {
  optional .TSWP.StyleUpdatePropertyMapCommandArchive super = 1;
}

message RemoteDataChangeCommandArchive {
  required .TSK.CommandArchive super = 1;
  required .TSCE.RemoteDataValueMapArchive value_map = 2;
  repeated .TSCE.StockArchive quotes = 3;
  required double remote_data_sync_key = 4;
}

message GalleryInfoSetValueCommandArchive {
  message PropertyValue {
    optional .TSA.GalleryInfoCaptionMode caption_mode = 1;
  }

  required .TSK.CommandArchive super = 1;
  optional .TSP.UUIDPath info_id_path = 2;
  optional .TSA.GalleryInfoProperty property = 3;
  optional .TSA.GalleryInfoSetValueCommandArchive.PropertyValue value = 4;
  optional .TSA.GalleryInfoSetValueCommandArchive.PropertyValue old_value = 5;
}

message GalleryInfoInsertItemsCommandArchive {
  required .TSD.ContainerInsertChildrenCommandArchive super = 1;
  repeated .TSP.Reference items = 2;
}

message GalleryInfoRemoveItemsCommandArchive {
  required .TSD.ContainerRemoveChildrenCommandArchive super = 1;
}

message GalleryItemSetGeometryCommand {
  required .TSK.CommandArchive super = 1;
  optional .TSP.UUIDPath item_id_path = 2;
  optional .TSP.Point offset = 3;
  optional float scale = 4 [default = 1];
  optional .TSP.Point old_offset = 5;
  optional float old_scale = 6;
}

message GalleryItem {
  optional .TSP.Point offset = 1;
  optional float scale = 2;
  optional .TSP.DataReference image_data = 3;
  optional .TSP.DataReference thumbnail_image_data = 4;
  optional .TSD.ImageAdjustmentsArchive image_adjustments = 5;
  optional .TSP.DataReference adjusted_image_data = 6;
  optional .TSP.DataReference thumbnail_adjusted_image_data = 7;
  optional .TSP.Reference caption_storage = 8;
  optional string accessibility_description = 9;
}

message GalleryInfo {
  repeated .TSP.Reference items = 1;
  optional .TSA.GalleryCaptionMode caption_mode = 2;
  optional .TSP.Reference caption_storage = 3;
  extend .TSD.ImageArchive {
    optional .TSA.GalleryInfo gallery_info = 200;
  }
}

message GallerySelectionTransformer {
  required .TSD.DrawableSelectionTransformerArchive super = 1;
  optional .TSP.UUIDPath gallery_uuid_path = 2;
  optional .TSP.UUIDPath caption_storage_uuid_path = 3;
}

message GalleryItemSelection {
  optional .TSP.Reference displayed_item = 1;
  repeated .TSP.Reference items = 2;
}

message GalleryItemSelectionTransformer {
  optional .TSA.GalleryItemSelectionTransformerHelper transformer_helper = 1;
  optional .TSP.UUIDPath caption_storage_uuid_path = 2;
}

message GalleryItemSelectionTransformerHelper {
  optional .TSP.UUIDPath displayed_item_uuid_path = 1;
  repeated .TSP.UUIDPath item_uuid_paths = 2;
}

message GalleryItemSetValueCommand {
  message PropertyValue {
    optional .TSP.DataReference image_data = 1;
    optional string accessibility_description = 2;
  }

  required .TSK.CommandArchive super = 1;
  optional .TSP.UUIDPath item_id_path = 2;
  optional .TSA.GalleryItemProperty property = 3;
  optional .TSA.GalleryItemSetValueCommand.PropertyValue value = 4;
  optional .TSA.GalleryItemSetValueCommand.PropertyValue old_value = 5;
}

message CollaboratorGalleryItemCursor {
  optional .TSP.UUID displayed_item_id = 1;
  repeated .TSP.UUID item_ids = 2;
  extend .TSCK.CollaboratorCursorArchive {
    optional .TSA.CollaboratorGalleryItemCursor gallery_item_cursor = 400;
  }
}

message WebVideoInfo {
  optional string url = 1;
  optional .TSP.DataReference poster_image_data = 2;
  optional .TSD.Attribution attribution = 3;
  extend .TSD.ImageArchive {
    optional .TSA.WebVideoInfo web_video_info = 300;
  }
}

message CaptionPlacementArchive {
  optional int32 caption_anchor_location = 1;
  optional int32 drawable_anchor_location = 2;
}

message CaptionInfoArchive {
  required .TSWP.ShapeInfoArchive super = 1;
  optional .TSP.Reference placement = 2;
  optional .TSD.CaptionOrTitleKind childInfoKind = 3;
}

message TitlePlacementCommandArchive {
  required .TSD.InfoCommandArchive super = 1;
  optional .TSD.CaptionOrTitleKind placing_child_info_kind = 2;
  optional .TSP.Reference placement = 3;
  optional .TSP.Reference old_placement = 4;
}

message Object3DInfo {
  optional .TSP.DataReference object_data = 1;
  optional bool plays_animations = 2;
  optional .TSP.Pose3D pose3d = 3;
  optional .TSP.Rect boundingRect = 4;
  optional .TSP.DataReference thumbnail_image_data = 5;
  optional bool embedded_animations = 6;
  optional .TSP.Path tracedPath = 7;
  extend .TSD.MovieArchive {
    optional .TSA.Object3DInfo object_3D_info = 200;
  }
}

message Object3DInfoCommandArchive {
  required .TSD.InfoCommandArchive super = 1;
  optional .TSP.Reference info = 2;
  optional .TSP.UUIDPath info_id_path = 3;
  optional .TSP.DataReference thumbnail_image_data = 4;
  optional .TSP.DataReference old_thumbnail_image_data = 5;
  optional .TSP.Pose3D pose3d = 6;
  optional .TSP.Pose3D old_pose3d = 7;
  optional .TSP.Rect boundingRect = 8;
  optional .TSP.Rect oldBoundingRect = 9;
  optional .TSP.Path tracedPath = 10;
  optional .TSP.Path oldTracedPath = 11;
}

message Object3DInfoSetValueCommandArchive {
  enum Property {
    PlaysAnimations = 3;
    Opacity = 9;
  }
  message PropertyValue {
    optional bool plays_animations = 4;
    optional float opacity = 10;
  }

  required .TSK.CommandArchive super = 1;
  required .TSP.UUIDPath object_3d_info_id_path = 2;
  required .TSA.Object3DInfoSetValueCommandArchive.Property property = 3;
  optional .TSA.Object3DInfoSetValueCommandArchive.PropertyValue value = 4;
  optional .TSA.Object3DInfoSetValueCommandArchive.PropertyValue old_value = 5;
}
